package org.example.interfaces;

public interface ITable {
    void reserveTable();
    void occupyTable();
    void freeTable();
}
