package org.example.interfaces;

public interface IUser {
    String getUsername();
    String getPassword();
    void setUsername(String username);
    void setPassword(String password);
}
